--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MediaPlayer</string>
-
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
 
 </resources>
